# Rockchip-Universal-Imager

./: .gitignore  .gitmodules  CMakeLists.txt  PORT_TAURI.md  README.md
.github/workflows/: build-app.yaml  build-installer.yml  build-portable.yml  build-rkdeveloptool.yaml  build.yml  installer.yml  package.yaml  portable.yml
apps/imager-tauri/: README.md  package.json
apps/imager-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/imager-tauri/src-tauri/capabilities/: default.json
apps/imager-tauri/src-tauri/src/: commands.rs  lib.rs  logging.rs  paths.rs
apps/imager-tauri/src-tauri/src/platform/: device_access.rs  mod.rs
apps/imager-tauri/src-tauri/src/platform/linux/: device_access.rs  mod.rs
apps/imager-tauri/src-tauri/src/platform/macos/: device_access.rs
apps/imager-tauri/src-tauri/src/platform/unix/: mod.rs
apps/imager-tauri/src-tauri/src/platform/windows/: device_access.rs
apps/imager-tauri/ui/: app.css  app.js  index.html
cmake/: configure_rkdev_msys.sh  copy_rkdev.cmake  libwdi_build64.h.in  libwdi_configure.sh  rkdev_msys.sh  rkdev_patch.cmake  ui_embed.h.in
cmake/libwdi_host/: CMakeLists.txt
log/: log2026-07-05.txt  log2026-07-06.txt
packaging/: README.md  package-portable.sh
packaging/ci/: README.md  ci-env.sh  package-cell.sh  package-dist.sh
packaging/linux/: README.md  bootstrap-build-deps.sh  rockchip-universal-imager.desktop
packaging/macos/: Allow and Open.command  Info.plist  README.md  bootstrap-build-deps.sh  entitlements.plist  generate-dmg-background.swift  make-dmg.sh
packaging/windows/: README.md  bootstrap-build-deps.ps1  bootstrap-build-deps.sh  windows-bash.cmd
scripts/: build-loaders.sh  package-portable.mjs  package-portable.sh
scripts/setup/: linux.sh  macos.sh  windows.ps1
scripts/update-cmake/: linux.sh  macos.sh  windows.ps1
src/: file_dialog.cpp  file_dialog.h  libusb-win32-helper.cpp  libusb-win32-helper.h  logging.cpp  logging.h  main.cpp  rkdeveloptool_runner.cpp  rkdeveloptool_runner.h  usb_driver_windows.cpp  usb_driver_windows.h  webview_bindings.cpp  webview_bindings.h  windows_cmdline.cpp  windows_cmdline.h
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: loader_map.rs  logging.rs  paths.rs  usb.rs
src-tauri/src/platform/: flashing.rs
src/core/: device_access.h  emmc_ram_map.h  executable_path.cpp  executable_path.h  file_dialog.cpp  file_dialog.h  file_drop.h  gpt_probe.cpp  gpt_probe.h  libusb-win32-helper.cpp  loader_map.h  logging.cpp  logging.h  macos_file_drop.h  macos_file_drop.mm  macos_quit_guard.h  macos_quit_guard.mm  open_path.h  quit_guard.h  rkdeveloptool_runner.cpp  rkdeveloptool_runner.h  single_instance.cpp  single_instance.h  single_instance_mac.mm  udev_rules_helper.cpp  udev_rules_helper.h  usb_monitor.cpp  usb_monitor.h  webview_bindings.cpp
src/platform/linux/: device_access.cpp  file_dialog.cpp
src/platform/macos/: device_access.cpp  file_dialog.cpp  file_drop.mm  quit_guard.mm  single_instance.mm
src/platform/posix/: file_drop.cpp  open_path.cpp  quit_guard.cpp  single_instance.cpp  usb_monitor.cpp
src/platform/windows/: device_access.cpp  file_dialog.cpp  file_drop.cpp  open_path.cpp  quit_guard.cpp  single_instance.cpp  usb_monitor.cpp
src/ui/: app.css  app.html  app.js  index.html
tools/rkdeveloptool/: README.md
webview/core/src/: main.cpp
